--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.9.0
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+psycopg2-binary==2.7.6.1
 pylint==2.2.2
 pytz==2018.9
 six==1.12.0
